--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,12 @@
-.container-fluid{
-    background-color: #eee;
+.container-fluid {
+  background-color: #eee;
 }
 
-.white{
-    background-color: #fff;
+.white {
+  background-color: #fff;
+}
+
+ul {
+  max-width: 600px;
+  margin: 0 auto 50px auto;
 }
